add checkAuthentication && passwordChange

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,6 +22,8 @@ html(lang='en')
               a(href='/users/register') Register
             li(class=(title == 'Login' ? 'active' : ''))
               a(href='/users/login') Login
+              li(class=(title == 'Password' ? 'active' : ''))
+                a(href='/users/profile/password') Password
           ul.nav.navbar-nav.navbar-right
            li
               a(href='/users/logout') Logout
